--- a/example/v-loading.html
+++ b/example/v-loading.html
@@ -36,7 +36,7 @@
       content = document.querySelector(".content"),
       loading = document.querySelector(".loading");
     new VL(document.documentElement,{
-      loading: loading,
+      topLoading: loading,
       max: 80,
       bg: "#69aef1",
       cb: (fn) => {
